chore: cdk project setup with account info

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -223,6 +223,16 @@
   },
   "overrides": [
     {
+      "rules": {
+        "import/no-extraneous-dependencies": [
+          "off"
+        ]
+      },
+      "files": [
+        "*.ts"
+      ]
+    },
+    {
       "files": [
         ".projenrc.ts"
       ],
