--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@gemeentenijmegen/aws-constructs": "^0.0.22",
     "aws-cdk-lib": "^2.1.0",
-    "constructs": "^10.0.5"
+    "constructs": "^10.0.5",
+    "dotenv": "^16.4.5"
   },
   "license": "EUPL-1.2",
   "publishConfig": {
