--- a/.gitattributes
+++ b/.gitattributes
@@ -20,6 +20,8 @@
 /cdk.json linguist-generated
 /LICENSE linguist-generated
 /package.json linguist-generated
+/src/nl-wallet/prefill/prefill-function.ts linguist-generated
+/src/nl-wallet/token/token-function.ts linguist-generated
 /tsconfig.dev.json linguist-generated
 /tsconfig.json linguist-generated
 /yarn.lock linguist-generated
