--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,8 @@ junit.xml
 /cdk.out/
 .cdk.staging/
 .parcel-cache/
+!/src/nl-wallet/prefill/prefill-function.ts
+!/src/nl-wallet/token/token-function.ts
 !/.github/workflows/emergency.yml
 !/.github/workflows/auto-merge.yml
 !/.projenrc.ts
