feat: remove usage plan and do in lambda API key check

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@aws-sdk/client-dynamodb": "^3.679.0",
     "@gemeentenijmegen/apigateway-http": "^0.0.16",
     "@gemeentenijmegen/aws-constructs": "^0.0.22",
+    "@gemeentenijmegen/utils": "^0.0.18",
     "@types/aws-lambda": "^8.10.145",
     "aws-cdk-lib": "^2.1.0",
     "constructs": "^10.0.5",
