feat: prepare main stack

--- a/.gitattributes
+++ b/.gitattributes
@@ -22,6 +22,7 @@
 /package.json linguist-generated
 /src/nl-wallet/prefill/prefill-function.ts linguist-generated
 /src/nl-wallet/token/token-function.ts linguist-generated
+/src/prefill-demo/handler-function.ts linguist-generated
 /tsconfig.dev.json linguist-generated
 /tsconfig.json linguist-generated
 /yarn.lock linguist-generated
