--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ junit.xml
 .parcel-cache/
 !/src/nl-wallet/prefill/prefill-function.ts
 !/src/nl-wallet/token/token-function.ts
+!/src/prefill-demo/handler-function.ts
 !/.github/workflows/emergency.yml
 !/.github/workflows/auto-merge.yml
 !/.projenrc.ts
