feat: infra for submission forwarder

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ junit.xml
 !/src/nl-wallet/prefill/prefill-function.ts
 !/src/nl-wallet/token/token-function.ts
 !/src/prefill-demo/handler-function.ts
+!/src/submission-forwarder/lambda/forwarder-function.ts
 !/.github/workflows/emergency.yml
 !/.github/workflows/auto-merge.yml
 !/.projenrc.ts
