--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -152,6 +152,7 @@
           "src/nl-wallet/prefill/prefill.lambda.ts",
           "src/nl-wallet/token/token.lambda.ts",
           "src/prefill-demo/handler.lambda.ts",
+          "src/submission-forwarder/lambda/forwarder.lambda.ts",
           ".projenrc.ts",
           "projenrc/**/*.ts"
         ],
