--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bundle:nl-wallet/token/token.lambda:watch": "npx projen bundle:nl-wallet/token/token.lambda:watch",
     "bundle:prefill-demo/handler.lambda": "npx projen bundle:prefill-demo/handler.lambda",
     "bundle:prefill-demo/handler.lambda:watch": "npx projen bundle:prefill-demo/handler.lambda:watch",
+    "bundle:submission-forwarder/lambda/forwarder.lambda": "npx projen bundle:submission-forwarder/lambda/forwarder.lambda",
+    "bundle:submission-forwarder/lambda/forwarder.lambda:watch": "npx projen bundle:submission-forwarder/lambda/forwarder.lambda:watch",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "default": "npx projen default",
@@ -54,6 +56,7 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@aws-lambda-powertools/logger": "^2.15.0",
     "@aws-sdk/client-dynamodb": "^3.751.0",
     "@gemeentenijmegen/apigateway-http": "^0.0.22",
     "@gemeentenijmegen/aws-constructs": "^0.0.30",
