--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "aws-cdk-lib": "^2.1.0",
     "constructs": "^10.0.5",
     "dotenv": "^16.4.7",
-    "jose": "^5.10.0"
+    "jose": "^5.10.0",
+    "zod": "^3.24.2"
   },
   "license": "EUPL-1.2",
   "publishConfig": {
