--- a/package.json
+++ b/package.json
@@ -58,16 +58,19 @@
   "dependencies": {
     "@aws-lambda-powertools/logger": "^2.15.0",
     "@aws-sdk/client-dynamodb": "^3.758.0",
+    "@aws-sdk/client-s3": "^3.758.0",
     "@gemeentenijmegen/apigateway-http": "^0.0.22",
     "@gemeentenijmegen/aws-constructs": "^0.0.30",
     "@gemeentenijmegen/design-tokens": "^0.0.2-alpha.6",
     "@gemeentenijmegen/modules-zgw-client": "^0.0.4",
     "@gemeentenijmegen/utils": "^0.0.25",
     "@types/aws-lambda": "^8.10.147",
+    "@types/jsonwebtoken": "^9.0.9",
     "aws-cdk-lib": "^2.1.0",
     "constructs": "^10.0.5",
     "dotenv": "^16.4.7",
     "jose": "^5.10.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.24.2"
   },
   "license": "EUPL-1.2",
