--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bundle:prefill-demo/handler.lambda:watch": "npx projen bundle:prefill-demo/handler.lambda:watch",
     "bundle:submission-forwarder/lambda/forwarder.lambda": "npx projen bundle:submission-forwarder/lambda/forwarder.lambda",
     "bundle:submission-forwarder/lambda/forwarder.lambda:watch": "npx projen bundle:submission-forwarder/lambda/forwarder.lambda:watch",
+    "bundle:submission-forwarder/receiver-lambda/receiver.lambda": "npx projen bundle:submission-forwarder/receiver-lambda/receiver.lambda",
+    "bundle:submission-forwarder/receiver-lambda/receiver.lambda:watch": "npx projen bundle:submission-forwarder/receiver-lambda/receiver.lambda:watch",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "default": "npx projen default",
@@ -59,6 +61,7 @@
     "@aws-lambda-powertools/logger": "^2.15.0",
     "@aws-sdk/client-dynamodb": "^3.758.0",
     "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/client-sqs": "^3.758.0",
     "@gemeentenijmegen/apigateway-http": "^0.0.23",
     "@gemeentenijmegen/aws-constructs": "^0.0.31",
     "@gemeentenijmegen/design-tokens": "^0.0.2-alpha.6",
