--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ junit.xml
 !/src/nl-wallet/token/token-function.ts
 !/src/prefill-demo/handler-function.ts
 !/src/submission-forwarder/lambda/forwarder-function.ts
+!/src/submission-forwarder/receiver-lambda/receiver-function.ts
 !/.github/workflows/emergency.yml
 !/.github/workflows/auto-merge.yml
 !/.projenrc.ts
