chore: make sure file download does not corrupt file

--- a/package.json
+++ b/package.json
@@ -84,6 +84,9 @@
   "version": "0.0.0",
   "jest": {
     "coverageProvider": "v8",
+    "setupFiles": [
+      "dotenv/config"
+    ],
     "testMatch": [
       "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
       "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
