--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
     "aws-cdk": "^2",
+    "aws-sdk-client-mock": "^4.1.0",
     "commit-and-tag-version": "^12",
     "esbuild": "^0.25.2",
     "eslint": "^9",
