--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "bundle:prefill-demo/handler.lambda:watch": "npx projen bundle:prefill-demo/handler.lambda:watch",
     "bundle:submission-forwarder/forwarder-lambda/forwarder.lambda": "npx projen bundle:submission-forwarder/forwarder-lambda/forwarder.lambda",
     "bundle:submission-forwarder/forwarder-lambda/forwarder.lambda:watch": "npx projen bundle:submission-forwarder/forwarder-lambda/forwarder.lambda:watch",
+    "bundle:submission-forwarder/mail-lambda/mail.lambda": "npx projen bundle:submission-forwarder/mail-lambda/mail.lambda",
+    "bundle:submission-forwarder/mail-lambda/mail.lambda:watch": "npx projen bundle:submission-forwarder/mail-lambda/mail.lambda:watch",
     "bundle:submission-forwarder/receiver-lambda/receiver.lambda": "npx projen bundle:submission-forwarder/receiver-lambda/receiver.lambda",
     "bundle:submission-forwarder/receiver-lambda/receiver.lambda:watch": "npx projen bundle:submission-forwarder/receiver-lambda/receiver.lambda:watch",
     "clobber": "npx projen clobber",
@@ -62,6 +64,8 @@
     "@aws-lambda-powertools/logger": "^2.18.0",
     "@aws-sdk/client-dynamodb": "^3.788.0",
     "@aws-sdk/client-s3": "^3.787.0",
+    "@aws-sdk/client-ses": "^3.787.0",
+    "@aws-sdk/client-sns": "^3.787.0",
     "@aws-sdk/client-sqs": "^3.787.0",
     "@aws-sdk/lib-storage": "^3.787.0",
     "@gemeentenijmegen/apigateway-http": "^0.0.24",
