--- a/.gitattributes
+++ b/.gitattributes
@@ -24,6 +24,7 @@
 /src/nl-wallet/token/token-function.ts linguist-generated
 /src/prefill-demo/handler-function.ts linguist-generated
 /src/submission-forwarder/forwarder-lambda/forwarder-function.ts linguist-generated
+/src/submission-forwarder/mail-lambda/mail-function.ts linguist-generated
 /src/submission-forwarder/receiver-lambda/receiver-function.ts linguist-generated
 /tsconfig.dev.json linguist-generated
 /tsconfig.json linguist-generated
