--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -59,6 +59,9 @@
           "spawn": "bundle:submission-forwarder/forwarder-lambda/forwarder.lambda"
         },
         {
+          "spawn": "bundle:submission-forwarder/mail-lambda/mail.lambda"
+        },
+        {
           "spawn": "bundle:submission-forwarder/receiver-lambda/receiver.lambda"
         }
       ]
@@ -132,6 +135,24 @@
       "steps": [
         {
           "exec": "esbuild --bundle src/submission-forwarder/forwarder-lambda/forwarder.lambda.ts --target=\"node20\" --platform=\"node\" --outfile=\"assets/submission-forwarder/forwarder-lambda/forwarder.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:@aws-sdk/* --watch"
+        }
+      ]
+    },
+    "bundle:submission-forwarder/mail-lambda/mail.lambda": {
+      "name": "bundle:submission-forwarder/mail-lambda/mail.lambda",
+      "description": "Create a JavaScript bundle from src/submission-forwarder/mail-lambda/mail.lambda.ts",
+      "steps": [
+        {
+          "exec": "esbuild --bundle src/submission-forwarder/mail-lambda/mail.lambda.ts --target=\"node20\" --platform=\"node\" --outfile=\"assets/submission-forwarder/mail-lambda/mail.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:@aws-sdk/*"
+        }
+      ]
+    },
+    "bundle:submission-forwarder/mail-lambda/mail.lambda:watch": {
+      "name": "bundle:submission-forwarder/mail-lambda/mail.lambda:watch",
+      "description": "Continuously update the JavaScript bundle from src/submission-forwarder/mail-lambda/mail.lambda.ts",
+      "steps": [
+        {
+          "exec": "esbuild --bundle src/submission-forwarder/mail-lambda/mail.lambda.ts --target=\"node20\" --platform=\"node\" --outfile=\"assets/submission-forwarder/mail-lambda/mail.lambda/index.js\" --tsconfig=\"tsconfig.dev.json\" --external:@aws-sdk/* --watch"
         }
       ]
     },
@@ -397,13 +418,13 @@
       },
       "steps": [
         {
-          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@gemeentenijmegen/projen-project-type,@types/jest,@types/node,aws-sdk-client-mock,esbuild,eslint-import-resolver-typescript,eslint-plugin-import,jest,projen,ts-jest,ts-node,typescript,@aws-lambda-powertools/logger,@aws-sdk/client-dynamodb,@aws-sdk/client-s3,@aws-sdk/client-sqs,@aws-sdk/lib-storage,@gemeentenijmegen/apigateway-http,@gemeentenijmegen/aws-constructs,@gemeentenijmegen/design-tokens,@gemeentenijmegen/modules-zgw-client,@gemeentenijmegen/utils,@types/aws-lambda,@types/jsonwebtoken,dotenv,jose,jsonwebtoken,zod"
+          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@gemeentenijmegen/projen-project-type,@types/jest,@types/node,aws-sdk-client-mock,esbuild,eslint-import-resolver-typescript,eslint-plugin-import,jest,projen,ts-jest,ts-node,typescript,@aws-lambda-powertools/logger,@aws-sdk/client-dynamodb,@aws-sdk/client-s3,@aws-sdk/client-ses,@aws-sdk/client-sns,@aws-sdk/client-sqs,@aws-sdk/lib-storage,@gemeentenijmegen/apigateway-http,@gemeentenijmegen/aws-constructs,@gemeentenijmegen/design-tokens,@gemeentenijmegen/modules-zgw-client,@gemeentenijmegen/utils,@types/aws-lambda,@types/jsonwebtoken,dotenv,jose,jsonwebtoken,zod"
         },
         {
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade @gemeentenijmegen/projen-project-type @stylistic/eslint-plugin @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk aws-sdk-client-mock commit-and-tag-version esbuild eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit projen ts-jest ts-node typescript @aws-lambda-powertools/logger @aws-sdk/client-dynamodb @aws-sdk/client-s3 @aws-sdk/client-sqs @aws-sdk/lib-storage @gemeentenijmegen/apigateway-http @gemeentenijmegen/aws-constructs @gemeentenijmegen/design-tokens @gemeentenijmegen/modules-zgw-client @gemeentenijmegen/utils @types/aws-lambda @types/jsonwebtoken aws-cdk-lib constructs dotenv jose jsonwebtoken zod"
+          "exec": "yarn upgrade @gemeentenijmegen/projen-project-type @stylistic/eslint-plugin @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk aws-sdk-client-mock commit-and-tag-version esbuild eslint-import-resolver-typescript eslint-plugin-import eslint jest jest-junit projen ts-jest ts-node typescript @aws-lambda-powertools/logger @aws-sdk/client-dynamodb @aws-sdk/client-s3 @aws-sdk/client-ses @aws-sdk/client-sns @aws-sdk/client-sqs @aws-sdk/lib-storage @gemeentenijmegen/apigateway-http @gemeentenijmegen/aws-constructs @gemeentenijmegen/design-tokens @gemeentenijmegen/modules-zgw-client @gemeentenijmegen/utils @types/aws-lambda @types/jsonwebtoken aws-cdk-lib constructs dotenv jose jsonwebtoken zod"
         },
         {
           "exec": "npx projen"
