--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ junit.xml
 !/src/nl-wallet/prefill/prefill-function.ts
 !/src/nl-wallet/token/token-function.ts
 !/src/prefill-demo/handler-function.ts
+!/src/submission-forwarder/backup-lambda/backup-function.ts
 !/src/submission-forwarder/forwarder-lambda/forwarder-function.ts
 !/src/submission-forwarder/mail-lambda/mail-function.ts
 !/src/submission-forwarder/receiver-lambda/receiver-function.ts
