--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -156,6 +156,7 @@
           "src/submission-forwarder/forwarder-lambda/forwarder.lambda.ts",
           "src/submission-forwarder/internal-notification-mail-lambda/internalNotificationMail.lambda.ts",
           "src/submission-forwarder/receiver-lambda/receiver.lambda.ts",
+          "src/submission-forwarder/resubmit-lambda/resubmit.lambda.ts",
           ".projenrc.ts",
           "projenrc/**/*.ts"
         ],
