--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "bundle:submission-forwarder/receiver-lambda/receiver.lambda:watch": "npx projen bundle:submission-forwarder/receiver-lambda/receiver.lambda:watch",
     "bundle:submission-forwarder/resubmit-lambda/resubmit.lambda": "npx projen bundle:submission-forwarder/resubmit-lambda/resubmit.lambda",
     "bundle:submission-forwarder/resubmit-lambda/resubmit.lambda:watch": "npx projen bundle:submission-forwarder/resubmit-lambda/resubmit.lambda:watch",
+    "bundle:submission-forwarder/zgw-registration-lambda/zgw-registration.lambda": "npx projen bundle:submission-forwarder/zgw-registration-lambda/zgw-registration.lambda",
+    "bundle:submission-forwarder/zgw-registration-lambda/zgw-registration.lambda:watch": "npx projen bundle:submission-forwarder/zgw-registration-lambda/zgw-registration.lambda:watch",
     "clobber": "npx projen clobber",
     "compile": "npx projen compile",
     "default": "npx projen default",
