feat: #351 vip topic and user with mock test setup

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ junit.xml
 !/src/submission-forwarder/internal-notification-mail-lambda/internalNotificationMail-function.ts
 !/src/submission-forwarder/receiver-lambda/receiver-function.ts
 !/src/submission-forwarder/resubmit-lambda/resubmit-function.ts
+!/src/submission-forwarder/vip-transformation-lambda/vip-transformation-function.ts
 !/src/submission-forwarder/zgw-registration-lambda/zgw-registration-function.ts
 !/.github/workflows/emergency.yml
 !/.github/workflows/auto-merge.yml
