--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -161,6 +161,7 @@
           "src/submission-forwarder/internal-notification-mail-lambda/internalNotificationMail.lambda.ts",
           "src/submission-forwarder/receiver-lambda/receiver.lambda.ts",
           "src/submission-forwarder/resubmit-lambda/resubmit.lambda.ts",
+          "src/submission-forwarder/vip-transformation-lambda/vip-transformation.lambda.ts",
           "src/submission-forwarder/zgw-registration-lambda/zgw-registration.lambda.ts",
           ".projenrc.ts",
           "projenrc/**/*.ts"
