--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "@aws-lambda-powertools/logger": "^2.25.0",
+    "@aws-lambda-powertools/logger": "2.24.1",
     "@aws-sdk/client-dynamodb": "^3.864.0",
     "@aws-sdk/client-s3": "^3.864.0",
     "@aws-sdk/client-ses": "^3.864.0",
