--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ junit.xml
 !/src/prefill-demo/handler-function.ts
 !/src/nl-wallet/prefill/prefill-function.ts
 !/src/nl-wallet/token/token-function.ts
+!/src/static-form-definitions/lambda/StaticFormDefinitions-function.ts
 !/src/submission-forwarder/documentsToS3Storage/documentsToS3Storage-function.ts
 !/src/submission-forwarder/forwarder-lambda/forwarder-function.ts
 !/src/submission-forwarder/internal-notification-mail-lambda/internalNotificationMail-function.ts
