--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -390,8 +390,7 @@
       "name": "eslint",
       "description": "Runs eslint against the codebase",
       "env": {
-        "ESLINT_USE_FLAT_CONFIG": "false",
-        "NODE_NO_WARNINGS": "1"
+        "ESLINT_USE_FLAT_CONFIG": "false"
       },
       "steps": [
         {
