--- a/package.json
+++ b/package.json
@@ -74,13 +74,13 @@
   },
   "dependencies": {
     "@aws-lambda-powertools/logger": "2.30.2",
-    "@aws-sdk/client-dynamodb": "^3.970.0",
-    "@aws-sdk/client-s3": "^3.970.0",
-    "@aws-sdk/client-ses": "^3.970.0",
-    "@aws-sdk/client-sfn": "^3.970.0",
-    "@aws-sdk/client-sns": "^3.970.0",
-    "@aws-sdk/client-sqs": "^3.970.0",
-    "@aws-sdk/lib-storage": "^3.970.0",
+    "@aws-sdk/client-dynamodb": "3.966.0",
+    "@aws-sdk/client-s3": "3.966.0",
+    "@aws-sdk/client-ses": "3.966.0",
+    "@aws-sdk/client-sfn": "3.966.0",
+    "@aws-sdk/client-sns": "3.966.0",
+    "@aws-sdk/client-sqs": "3.966.0",
+    "@aws-sdk/lib-storage": "3.966.0",
     "@gemeentenijmegen/apigateway-http": "^0.0.35",
     "@gemeentenijmegen/aws-constructs": "^0.0.47",
     "@gemeentenijmegen/design-tokens": "^0.0.2-alpha.86",
