--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "@gemeentenijmegen/design-tokens": "^0.0.2-alpha.86",
     "@gemeentenijmegen/modules-zgw-client": "^0.0.8",
     "@gemeentenijmegen/utils": "^0.0.38",
-    "@types/aws-lambda": "^8.10.159",
+    "@types/aws-lambda": "8.10.159",
     "@types/jsonwebtoken": "^9.0.10",
     "aws-cdk-lib": "^2.1.0",
     "constructs": "^10.0.5",
