chore: improve build speed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "moduleResolution": "nodenext",
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "isolatedModules": true
   },
   "include": [
     "src/**/*.ts"
