feat: add new prefill request handler module
- Add new prefill module with request handling and form prefilling logic
- Create PrefillRequest, StatusIITAndAVIForm, handlePrefillRequest, and prefill.lambda handlers

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ junit.xml
 /cdk.out/
 .cdk.staging/
 .parcel-cache/
+!/src/prefill/prefill-function.ts
 !/src/prefill-demo/handler-function.ts
 !/src/nl-wallet/prefill/prefill-function.ts
 !/src/nl-wallet/token/token-function.ts
