--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bundle:nl-wallet/token/token.lambda:watch": "npx projen bundle:nl-wallet/token/token.lambda:watch",
     "bundle:prefill-demo/handler.lambda": "npx projen bundle:prefill-demo/handler.lambda",
     "bundle:prefill-demo/handler.lambda:watch": "npx projen bundle:prefill-demo/handler.lambda:watch",
+    "bundle:prefill/prefill.lambda": "npx projen bundle:prefill/prefill.lambda",
+    "bundle:prefill/prefill.lambda:watch": "npx projen bundle:prefill/prefill.lambda:watch",
     "bundle:static-form-definitions/formio-login/login-mock.lambda": "npx projen bundle:static-form-definitions/formio-login/login-mock.lambda",
     "bundle:static-form-definitions/formio-login/login-mock.lambda:watch": "npx projen bundle:static-form-definitions/formio-login/login-mock.lambda:watch",
     "bundle:static-form-definitions/lambda/StaticFormDefinitions.lambda": "npx projen bundle:static-form-definitions/lambda/StaticFormDefinitions.lambda",
@@ -80,6 +82,7 @@
     "@aws-sdk/client-sns": "3.985.0",
     "@aws-sdk/client-sqs": "3.985.0",
     "@aws-sdk/lib-storage": "3.985.0",
+    "@gemeentenijmegen/apiclient": "^0.0.40",
     "@gemeentenijmegen/apigateway-http": "^0.0.36",
     "@gemeentenijmegen/aws-constructs": "^0.0.48",
     "@gemeentenijmegen/design-tokens": "^0.0.2-alpha.104",
