--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -153,6 +153,7 @@
         "devDependencies": [
           "**/test/**",
           "**/build-tools/**",
+          "src/prefill/prefill.lambda.ts",
           "src/prefill-demo/handler.lambda.ts",
           "src/nl-wallet/prefill/prefill.lambda.ts",
           "src/nl-wallet/token/token.lambda.ts",
